# tour-buddy

./: .gitignore  Dockerfile  README.md  azure-pipeline.yml  azure-pipelines.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/worflows/: blank.yml
.github/workflows/: blank.yml  feature-roadmap_tourbuddy-test.yml
src/: requirements.txt
src/database/: db.py
src/database/crud/: roadmap_crud.py  user_crud.py
src/enum/: user_type.py
src/models/: __init__.py  roadmap_model.py  user_model.py
src/routers/: __init__.py  auth_route.py  roadmap_route.py  user.py  user_route.py
src/schemas/: __init__.py  address_schema.py  city_schema.py  roadmap_schema.py  sign_up.py  signup_schema.py  state_schema.py  user_schema.py
src/service/: __init__.py  roadmap_service.py  user_service.py
src/utils/: __init__.py  config.py
