[tool.poetry]
name = "backend-tcc"
version = "0.1.0"
description = ""
authors = ["EnricoPDG <ricopapsch@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-dotenv = "^1.0.1"
firebase-admin = "^6.5.0"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
